// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoreButton should render with App Store theme 1`] = `
<Link
  className="mfui-store-button mfui-store-button_theme_app-store"
  href="href"
  rel="nofollow"
/>
`;

exports[`StoreButton should render with Google Play 1`] = `
<Link
  className="mfui-store-button mfui-store-button_theme_google-play"
  href="href"
  rel="nofollow"
/>
`;

exports[`StoreButton should render with custom class name 1`] = `
<Link
  className="mfui-store-button mfui-store-button_theme_app-store custom-class-name"
  href="href"
  rel="nofollow"
/>
`;

exports[`StoreButton should render with data-attributes 1`] = `
<Link
  className="mfui-store-button mfui-store-button_theme_app-store"
  dataAttrs={
    Object {
      "root": Object {
        "data-test-id": "root-test",
      },
    }
  }
  href="href"
  rel="nofollow"
/>
`;

exports[`StoreButton should render with target prop 1`] = `
<Link
  className="mfui-store-button mfui-store-button_theme_app-store"
  href="href"
  rel="nofollow"
  target="_blank"
/>
`;
